# leg_tracker

./: CMakeLists.txt  package.xml
include/particle_filter/: MultipleParticleFilter.h  Particle.h  ParticleFilter.h
include/player_tracker/: ClusterLogger.hpp  laser_processor.h  motion_detector.h  motion_variance.h  spatial_temporal.h
ipynb/: Experiments.ipynb  log_file.txt
ipynb/.ipynb_checkpoints/: Experiments-checkpoint.ipynb
launch/experiments/: leg_distance.launch  rotation_test.launch  test.launch
launch/training/: extract_positive_training_clusters_res=0.33.launch
logs/: spatial_temporal_log.txt
model/: leg_distance-gmm.pkl
msg/: Blob.msg  Leg.msg  Person.msg  TrackVariance.msg
scripts/: auxiliar.py  detector.py  detector2.py  joint_leg_tracker.py  leg_distance.py  leg_sample_extractor.py  perception_grid_match.py  spatial_temporal_feature_joiner.py
src/: ClusterLogger.cpp  cloud_cluster.cpp  cluster_logger_node.cpp  detect_leg_clusters.cpp  extract_positive_training_clusters.cpp  laser_processor.cpp  local_occupancy_grid_mapping.cpp  motion_detector.cpp  motion_detector_node.cpp  motion_variance.cpp  motion_variance_node.cpp  optitrack_to_tf_node.cpp  spatial_temporal.cpp  spatial_temporal_node.cpp  test_local_occupancy_grid_mapping.cpp
src/particle_filter/: BlobPublisher.cpp  MultipleParticleFilter.cpp  Particle.cpp  ParticleFilter.cpp  blob_publisher.cpp  pf_tracker.cpp
